name:                wybor
version:             0.1.0
synopsis:            Console line fuzzy search
description:         Console line fuzzy search as a library
homepage:            https://github.com/supki/wybor
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           Matvey Aksenov 2014
category:            Text
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2
extra-source-files:
  README.markdown

source-repository head
  type: git
  location: https://github.com/supki/wybor

library
  default-language:
    Haskell2010
  build-depends:
      ansi-terminal >= 0.6
    , async         >= 2.0
    , base          >= 4.6 && < 5
    , conduit       >= 1.1
    , lens          >= 4.3
    , monad-control >= 0.3.3
    , resourcet     >= 1.1
    , stm           >= 2.4
    , stm-conduit   >= 2.5.0
    , text          >= 1.1
    , transformers  >= 0.3
    , process       >= 1.1
    , semigroups    >= 0.15
    , terminal-size >= 0.2.1
  hs-source-dirs:
    src
  exposed-modules:
    Wybor
  other-modules:
    Score
    TTY
    Zipper

executable wybor
  default-language:
    Haskell2010
  build-depends:
      base                 >= 4.6 && < 5
    , lens
    , optparse-applicative >= 0.9
    , semigroups
    , text
    , wybor
  hs-source-dirs:
    bin
  main-is:
    Main.hs
  ghc-options:
    -threaded

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      ansi-terminal
    , async
    , base          >= 4.6 && < 5
    , conduit
    , exceptions
    , hspec         >= 1.10
    , lens
    , monad-control
    , process
    , resourcet
    , semigroups
    , stm
    , stm-conduit
    , terminal-size
    , text
    , transformers
    , unix
  hs-source-dirs:
    test
    src
  main-is:
    Spec.hs
  ghc-options:
    -threaded
  cpp-options:
    -DTEST
