name:                gnoodle
version:             0.1.0
synopsis:            Download software from GNU folks!
description:         Download software from GNU folks!
homepage:            https://github.com/supki/wybor
license:             BSD2
license-file:        ../../LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           Matvey Aksenov 2014
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2

source-repository head
  type: git
  location: https://github.com/supki/wybor

executable gnoodle
  default-language:
    Haskell2010
  build-depends:
      base                  >= 4.6 && < 5
    , bytestring
    , conduit
    , conduit-extra         >= 1.1
    , filepath
    , html-conduit          >= 1.1
    , http-conduit          >= 2.1
    , lens
    , resourcet
    , semigroups
    , text
    , transformers
    , wybor
    , xml-html-conduit-lens >= 0.3.2
  hs-source-dirs:
    src
  main-is:
    Main.hs
  ghc-options:
    -threaded
