name:                wybor-bin
version:             0.1.0
synopsis:            Selecta clone using the wybor library
description:         Selecta clone using the wybor library
homepage:            https://github.com/supki/wybor
license:             BSD2
license-file:        ../../LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           Matvey Aksenov 2014
category:            Text
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2

source-repository head
  type: git
  location: https://github.com/supki/wybor

executable wybor
  default-language:
    Haskell2010
  build-depends:
      base                 >= 4.6 && < 5
    , conduit
    , lens
    , optparse-applicative >= 0.10
    , resourcet
    , semigroups
    , text
    , transformers
    , wybor
  hs-source-dirs:
    src
  main-is:
    Main.hs
  ghc-options:
    -threaded
